# python-exercises

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
python_exercises/basic_exercise_for_beginners/: exercise_1.py  exercise_10.py  exercise_11.py  exercise_12.py  exercise_13.py  exercise_14.py  exercise_15.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py  exercise_6.py  exercise_7.py  exercise_8.py  exercise_9.py
python_exercises/input_and_output_exercise/: exercise_1.py
python_exercises/tests/basic_exercise_for_beginners/: test_exercise_1.py  test_exercise_10.py  test_exercise_11.py  test_exercise_12.py  test_exercise_13.py  test_exercise_14.py  test_exercise_15.py  test_exercise_2.py  test_exercise_3.py  test_exercise_4.py  test_exercise_5.py  test_exercise_6.py  test_exercise_7.py  test_exercise_8.py  test_exercise_9.py
python_exercises/tests/input_and_output_exercise/: test_exercise_1.py
tests/basic_exercise_for_beginners/: test_exercise_1.py
